// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A delegated application without the flag is refused should refuse a delegated application deleting its own declared role 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "userFriendlyMessage": "You do not have permission to perform this action.",
  },
  "message": "This endpoint is not available to this caller",
}
`;

exports[`A delegated application without the flag is refused should refuse a view mutation 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "VIEW_MODIFY_PERMISSION_DENIED",
    "userFriendlyMessage": "You don't have permission to modify this view.",
  },
  "message": "You do not have permission to modify this view",
  "name": "ForbiddenError",
}
`;

exports[`A delegated application without the flag is refused should refuse a workspace-scoped blocklist entry 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "PERMISSION_DENIED",
    "userFriendlyMessage": "You do not have permission to manage the workspace blocklist.",
  },
  "message": "Entity performing the request does not have permission",
}
`;

exports[`A delegated application without the flag is refused should refuse deleteUserFromWorkspace for another member 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "PERMISSION_DENIED",
    "userFriendlyMessage": "You do not have permission to delete this user from the workspace. Please contact your workspace administrator for access.",
  },
  "message": "Entity performing the request does not have permission",
  "name": "ForbiddenError",
}
`;

exports[`A delegated application without the flag is refused should refuse the billing checkout permission path 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "PERMISSION_DENIED",
    "userFriendlyMessage": "You do not have permission to perform this action.",
  },
  "message": "Entity performing the request does not have permission",
  "name": "ForbiddenError",
}
`;

exports[`A delegated application without the flag is refused should refuse the profile picture upload 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "PERMISSION_DENIED",
    "userFriendlyMessage": "You do not have permission to upload profile pictures. Please contact your workspace administrator for access.",
  },
  "message": "Entity performing the request does not have permission",
  "name": "ForbiddenError",
}
`;

exports[`A delegated application without the flag is refused should refuse updateWorkspaceMemberSettings on another member 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "PERMISSION_DENIED",
    "userFriendlyMessage": "You do not have permission to update this workspace member.",
  },
  "message": "Entity performing the request does not have permission",
  "name": "ForbiddenError",
}
`;
